[project]
name = "mujoco-cube"
version = "0.1.0"
description = "MuJoCo model of a 3x3x3 puzzle cube, with a script to procedurally generate it."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { file = "LICENSE" }
dependencies = [
    "mujoco>=3.1.0",
    "dm_control>=1.0.15",
    "pillow",
    "numpy",
    "trimesh",
]

[dependency-groups]
dev = [
    "pytest",
    "absl-py",
]

[tool.uv]
package = false
